# fastapi_template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: .gitkeep
app/: main.py
app/api/v1/: auth.py  items.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py
app/repositories/: __init__.py
app/schemas/: __init__.py
config/: database.env
scripts/: dev.ps1  setup_db.py
tests/: conftest.py  test_auth.py  test_items.py  test_main.py  test_users.py
